--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       sizes="32x32"
       type="image/xml+svg"
     />
+    <link rel="stylesheet" href="./dist/styles.css" />
     <title>Single-page design portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <script src="./app/js/script.js"></script>
+  </body>
 </html>
